--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gif.OS</title>
-    <link href="https://fonts.googleapis.com/css?family=Chakra+Petch:400,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Chakra+Petch:400,700&display=swap" rel="stylesheet">   
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
     <link rel="stylesheet" href="css/styles.css">
     
@@ -36,7 +38,6 @@
                     </ul>            
                 </nav>
             </header>
-
             <section id="search"  class="search_input">
                 <div class="top_bar">
                     <h2>Buscar </h2>
@@ -45,10 +46,12 @@
                     <input type="text" placeholder="Busca gifs, hashtags, temas, busca lo que quieras…">
                     <button disabled>&#128269 Buscar</button>
                 </div>
-
+            </section>
+            <section>
+                <h4>Grid</h4>
+                <div id="grid"></div>
             </section>
       </div>
-
     </div>  
 </body>
 </html>
