Revision posicionamiento header y nav

--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
                 <div class="top_bar">
                     <h2>Buscar </h2>
                 </div>
-                <div>
+                <div class="input_button_search">
                     <input type="text" placeholder="Busca gifs, hashtags, temas, busca lo que quieras…">
                     <button disabled>&#128269 Buscar</button>
                 </div>
             </section>
             <section>
-                <h4>Grid</h4>
-                <div id="grid"></div>
+                <!-- <h4>Grid</h4>
+                <div id="grid"></div> -->
             </section>
       </div>
     </div>  
