Añadiendo Change Theme

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                         <div class="list_theme">
                             <li><a class="link_theme" href="">Elegir tema</a>
                                 <ul class="submenu">
-                                    <li><a class="button1" href=""><span>S</span>ailor Day</a></li>
-                                    <li><a class="button2" href="">Sailor Night</a></li>
+                                    <li><a class="button1" href="" onclick="return changeThemeDay()"><span>S</span>ailor Day</a></li>
+                                    <li><a class="button2" href="" onclick="return changeThemeNight()">Sailor Night</a></li>
                                 </ul>
                             </li>
                             <li class="button_arrow"><a href=""><img src="img/dropdown.svg" alt=""></a></li>
@@ -44,9 +44,8 @@
                     <input type="text" id='search-input' class="search-input" placeholder="Busca gifs, hashtags, temas, busca lo que quieras…">
                     <button id="btn" class="btn" type="submit"><p><img src="img/lupa_inactive.svg" alt="lupa"> Buscar</p></button>                  
                 </form>
-                <div id="results_suggested">
-                    <button onclick="tag()" style='display:none;'></button>
-                    
+                <div id="results_suggested">                  
+                    <!-- gif Images Here -->
                     
                 </div>
             </section>
