--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div class="contenedor_center">
             <header>            
                 <nav>
-                    <img src="img/gifOF_logo.png" alt="logo_">
+                    <img src="img/gifOF_logo.png" alt="logo_" id="logo">
                     <ul>
-                        <li><a href="">Crear Guifos</a></li>
+                        <li><a href="./own-gifOS.html">Crear Guifos</a></li>
                         <div class="list_theme">
                             <li><a class="link_theme" href="">Elegir tema</a>
                                 <ul class="submenu">
@@ -59,7 +59,7 @@
             </section>
             <section id="section-results-trends">
                 <div>
-                    <input type="text" class="top_input_section" value='Tendencias' disabled >
+                    <input type="text" id='top_input_section_tendencias' class="top_input_section" value='Tendencias' disabled >
                 </div>
                 <div id='div-results_trends' class='div-results_trends'>
                     <!-- gif Images Here -->
@@ -69,8 +69,10 @@
       </div>
     </div>
 
-<!-- JQuery -->
+<!-- JQuery y JS-->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script type="text/javascript" src="js/main.js"></script>
+<script type="text/javascript" src="js/request.js"></script>
+<script type="text/javascript" src="js/theme.js"></script>
+<script type="text/javascript" src="js/button.js"></script>
 </body>
 </html>
